--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,34 @@
+// tsconfig.json
+
 {
-  "files": [],
-  "references": [
-    { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
-  ]
+  "compilerOptions": {
+    "target": "ES2020",
+    "useDefineForClassFields": true,
+    "lib": ["ES2020", "DOM", "DOMAIT"],
+    "module": "ESNext",
+    "skipLibCheck": true,
+
+    /* Налаштування React/JSX */
+    "jsx": "react-jsx", // <-- ВИКОРИСТОВУЙТЕ "react-jsx"
+
+    /* Налаштування модульності */
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+
+    /* Строгість */
+    "strict": true,
+    "noUnusedLocals": false, // <-- Вимкнення перевірки невикористаних локальних змінних
+    "noUnusedParameters": false, // <-- Вимкнення перевірки невикористаних параметрів
+    "noFallthroughCasesInSwitch": true,
+
+    /* Виправлення помилок TS6133, TS1484 */
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true
+    // Якщо у вас був, видаліть або встановіть "verbatimModuleSyntax": false
+  },
+  "include": ["src"],
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
